# ThreadStone

./: .gitignore  Cargo.toml  README.md  run_dhry_parallel.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/keys/: threadstone.pub
cli/src/: main.rs  signing.rs
cli/tests/: cli.rs  schema.rs  stream_integration.rs
examples/: results.json  stream.json
threadstone-core/: Cargo.toml
threadstone-core/src/: lib.rs  time.rs
v1/: result.schema.json
workloads/: Cargo.toml  build.rs
workloads/native/dhry/: dhry.h  dhry_1.c  dhry_2.c  shim.c  wrapper.c
workloads/src/: dhrystone.rs  lib.rs  stream.rs
workloads/tests/: dhry_smoke.rs
