[package]
name = "threadstone-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
threadstone-core = { path = "../threadstone-core" }
workloads        = { path = "../workloads" }
rayon = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.16"
num_cpus = "1.16"
ring = "0.17"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }